# budgie-desktop-services

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  Taskfile.yml
.github/: README.md
.woodpecker/: build.yaml
src/: CMakeLists.txt  main.cpp
src/config/: display.cpp  display.hpp  utils.cpp  utils.hpp
src/config/outputs/: global_preferences.cpp  global_preferences.hpp  group.cpp  group.hpp  output.cpp  output.hpp  state.cpp  state.hpp
src/data/: org.buddiesofbudgie.Services.desktop.in  org.buddiesofbudgie.Services.service.in
src/dbus/: BatchSystemService.cpp  BatchSystemService.hpp  ConfigService.cpp  ConfigService.hpp  DisplayObjectManager.cpp  DisplayService.cpp  DisplayService.hpp  OutputModeService.cpp  OutputModeService.hpp  OutputService.cpp  OutputService.hpp  OutputsService.cpp  OutputsService.hpp  org.buddiesofbudgie.Services.conf
src/dbus/schemas/: DisplaySchema.BatchSystem.xml  DisplaySchema.Displays.xml  DisplaySchema.Output.xml  DisplaySchema.OutputMode.xml  DisplaySchema.Outputs.xml
src/displays/batch-system/: configurationaction.cpp  configurationaction.hpp  outputbatchsystem.cpp  outputbatchsystem.hpp  result.cpp  result.hpp  targetstate.cpp  targetstate.hpp
src/displays/batch-system/enums/: configurationactiontype.hpp  configurationanchors.hpp
src/displays/output-manager/: WaylandOutputManager.cpp  WaylandOutputManager.hpp
src/displays/output-manager/wlr/head/: enums.hpp  head.cpp  head.hpp  metahead.cpp  metahead.hpp
src/displays/output-manager/wlr/mode/: enums.hpp  metamode.cpp  metamode.hpp  mode.cpp  mode.hpp
src/outputs/: configuration.cpp  configuration.hpp  state.cpp  state.hpp  types.cpp  types.hpp
src/outputs/config/: action.cpp  action.hpp  model.cpp  model.hpp  result.cpp  result.hpp  targetstate.cpp  targetstate.hpp
src/outputs/config/enums/: actiontype.hpp  anchors.hpp
src/outputs/wlr/: configuration.cpp  configuration.hpp  configurationhead.cpp  configurationhead.hpp  enums.hpp  head.cpp  head.hpp  metahead.cpp  metahead.hpp  metamode.cpp  metamode.hpp  mode.cpp  mode.hpp  outputmanager.cpp  outputmanager.hpp
src/sys/: SysInfo.cpp  SysInfo.hpp
